--- a/Proj/code/LS/LSApp/readme.org
+++ b/Proj/code/LS/LSApp/readme.org
@@ -107,6 +107,69 @@ Resources can be added by as follows:
 - Select the files to add and press =OK=
 
 These resources should now be available for QtDesigner or for QtCreator handling.
+** ✔ DONE Add Virtual Keyboard to Sharing menu
+   :LOGBOOK:
+   - State "✔ DONE"     from "☛ TODO"     [2022-01-03 seg 00:43]
+   - State "☛ TODO"     from              [2022-01-02 dom 19:48]
+   :END:
+A virtual keyboard (on-screen) can be added to facilitate user input to edit the
+post.
+- Qt supports this feature by using the =QtVirtualKeyboard= ([[https://doc.qt.io/qt-5/qtvirtualkeyboard-index.html][src]]), which is
+  available for QtQuick and QtWidgets applications.
+- Thus, it can be used in QML and C++.
+- It targets Desktop and Embedded systems.
+
+*TL;DR*: There is a project that was compiled and run successfully on
+=/code/qt/virtualkeyboard/= 
+*** Installation
+=QtVirtualKeyboard= is available as a =Qt= module, meaning it should be
+installed by the =Qt= maintenance tool.
+- The maintenance tool is available only for =Qt= website installations. ([[https://www.qt.io/download-open-source?hsCtaTracking=9f6a2170-a938-42df-a8e2-a9f0b1d6cdce%257C6cb0de4f-9bb5-4778-ab02-bfb62735f3e5][src]])
+- When installing =Qt=, select =Custom Install= and then select the desired
+  modules, e.g. =QtVirtualKeyboard=.
+*** Compilation
+**** Includes
+For =QtVirtualKeyboard= to be used, it must be included. Thus, =#include
+<QtVirtualKeyboard>=, in every file required. 
+- For more info, see [[https://doc.qt.io/qt-6/qtvirtualkeyboard-module.html#details][here]].
+**** Module loading
+For the module to be recognized, it requires:
+- =main.cpp=: Add this line in =main()= function ([[https://stackoverflow.com/q/57161308][src]]):
+  #+BEGIN_SRC cpp
+  #include <QtWidgets>
+
+  int main(int argc, char *argv[]) {
+   /**< Add this line */
+    qputenv("QT_IM_MODULE", QByteArray("qtvirtualkeyboard"));
+
+    QApplication app(argc, argv);
+    QMainWindow window;
+    QLineEdit input(&window);
+    input.move(250, 250);
+    window.show();
+    return app.exec();
+    }
+  #+END_SRC
+- =.bashrc=: /maybe/ this line must be added too:
+  #+BEGIN_SRC bash
+  # Qt virtual keyboard
+  export QT_IM_MODULE=qtvirtualkeyboard
+  #+END_SRC
+**** CMake builds
+- Add the following to =CmakeLists.txt=
+  #+BEGIN_SRC cmake
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets VirtualKeyboard REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets VirtualKeyboard REQUIRED)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::VirtualKeyboard)
+  #+END_SRC
+**** ✔ DONE Example project
+     :LOGBOOK:
+     - State "✔ DONE"     from              [2022-01-03 seg 00:47]
+       - *SUCCESS*
+     :END:
+- project that was compiled and run successfully on =/code/qt/virtualkeyboard/=
+- Select the input text and the virtual keyboard will show up
 * External libraries setup
 ** OpenCV
 - Add the following to the =CMakeLists.txt=
