--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -7622,6 +7622,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Widgets ${OpenCV_LIBS})
 *** Read, display and process videos with Qt and OpenCV
 [[https://amin-ahmadi.com/2018/03/29/how-to-read-process-and-display-videos-using-qt-and-opencv/][src]]
 - [[https://bitbucket.org/amahta/videoprocessor/src/master/][Repo]]
+- [[file:code/computer-vision/qt-test/videoprocessor][Local repo]]
 
 *Steps* [0/8]
 1) [ ] Create a Qt Widget app using Qt Creator
@@ -7847,7 +7848,7 @@ while (video.isOpened())
  - *Top priority*
  - /Medium priority/
  - ~Low priority~
-*** Qt [1/3]
+*** Qt [1/4]
     :PROPERTIES:
     :ID:       7e7c3a09-af4f-4395-a7f8-681dab1b95c1
     :END:
@@ -7870,26 +7871,26 @@ while (video.isOpened())
       2) You should symlink it (or simply copy it) to the root of your
 	source tree, if they are different.
 3) [-] Design the UI
-   1) [-] Draw the several UI views following [[id:9fbc087a-a9db-49d1-83ff-f16804ee72dc][method 2]]
+   1) [X] Draw the several UI views following [[id:9fbc087a-a9db-49d1-83ff-f16804ee72dc][method 2]]
       1) [X] Welcome view: =MainWindow=
 	 - displayed when no Ad is supposed to be running
 	 - contains a description about the project, how to rent ads, etc.
-      2) [ ] Normal mode view: =NormalWindow=
+      2) [X] Normal mode view: =NormalWindow=
 	 - Reproduces video in fullscreen (with audio)
-      3) [ ] Interaction mode view: =InterWindow=
+      3) [X] Interaction mode view: =InterWindow=
 	 1) includes:
 	    1) =Main menu=: page0
 	    2) =Picture mode=: page1
 	    3) =GIF mode=: page2
-      4) [ ] Image filtering view: =ImgFiltWindow=
+      4) [X] Image filtering view: =ImgFiltWindow=
 	 1) includes:
 	    1) =Main menu=
-      5) [ ] Sharing mode: =SharWindow=
+      5) [X] Sharing mode: =SharWindow=
 	 1) includes:
 	    1) =Main menu=: selection (page 0)
 	    2) =Editing=: presents a virtual keyboard (page 1)
 	    3) =Status=: presents a status message box to the user (page 2)
-   2) [ ] Use dummy pushbuttons to navigate through the several UI views
+   2) [X] Use dummy pushbuttons to navigate through the several UI views
    3) [ ] =GestureRecognitionEngine= belongs to =MainWindow=.
       1) It must detect a predefined user gesture
       2) When matched, it emits a signal =gestureDetected()= for the
@@ -7946,4 +7947,6 @@ while (video.isOpened())
 	       }
 	   }
 	 #+END_SRC
+4) [ ] Classes
+   1) [ ] =Camera=: manages the camera
 
